# MCU_TRACE

./: .gitignore  CHANGELOG.md  GITHUB_SETUP.md  PLAN.md  README.md  README_PORTABLE.md  deliverable.md  deliverable_v02.md  deliverable_v021.md  deliverable_xaxis.md  make_portable_zip.py  push.bat  pyproject.toml  start_proxy.bat  verify_xaxis_report.md
installer/: install.ps1  mcu_trace.spec  uninstall.ps1
src/mcu_trace/: __init__.py  __main__.py  app.py
src/mcu_trace/assets/config/: builtin_rules.json  psm_fsm.json  soc_fsm.json
src/mcu_trace/assets/templates/: report.html
src/mcu_trace/core/: analyzer.py  config.py  importer.py  keyword.py  models.py  parser.py  reporter.py  reset.py  rules_loader.py  state_machine.py  voltage.py
src/mcu_trace/web/: index.html
tests/: test_keyword.py  test_parser.py  test_reset.py  test_rules_loader.py  test_state_machine.py  test_voltage.py
tools/: github_tunnel.py  http_proxy.py
work/: final_e2e_report.md  report.html  report_verify.html  report_verify.json
